# app

./: .env  Cargo.toml  Makefile.toml  Readme.MD  index.html  package-lock.json  tailwind.config.js
src/: main.rs
src/components/: context_provider.rs  dropdown.rs  mod.rs  navigation.rs
src/components/features/: mod.rs  protected_route.rs
src/components/templates/: center_template.rs  mod.rs  sidebar_template.rs
src/hooks/: use_user_context.rs
src/pages/: contact.rs  mod.rs  not_found.rs  profile.rs  projects.rs
src/routes/: contacts.rs  login.rs  mod.rs  not_found.rs  projects.rs  register.rs  router.rs
src/routes/auth/: login.rs  register.rs
src/routes/profile/: edit_profile.rs  mod.rs  profile.rs
src/services/: auth.rs  mod.rs  requests.rs  router.rs
src/templates/: center_template.rs  sidebar_template.rs
src/types/: auth.rs  error.rs
styles/: output.css
