[package]
name = "portfolio-rust-app"
version = "0.1.0"
authors = ["Ahmad Zainul Abidin <ahmadclab@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-bootstrap = "0.4.0"
yew-router = "0.16.0"
